--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 Glassomium
 ==========
 
-Home page: http://www.glassomium.org
+An open-source, web-based and TUIO-enabled windows manager for large screen displays.
 
-This project is licensed under the terms of the Apache 2.0 License. For more information about using, installing, compiling and developing check out the wiki at http://www.glassomium.org/wiki/
+![Glassomium](pierotofy.github.com/glassomium/screenshots/images/3.jpg)
 
+See this page for images, videos, downloads and documentation: (http://pierotofy.github.com/glassomium)[http://pierotofy.github.com/glassomium
+]
